# testor-emulator

./: .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app1/: .dockerignore  pyproject.toml
app1/src/: main.py  pyproject.toml
app1/src/api/: admin.py  base.py  users.py
app1/src/config/: db.py  settings.py
app1/src/migrations/: env.py
app1/src/migrations/versions/: a2be24672835_unique_email_in_user.py  b86df40a09ed_init.py  df6450e1a4ad_latitude_longitude_to_float.py  ffebb837e8ce_add_user.py
app1/src/models/: logs.py  users.py
app1/src/schemas/: logs.py  query.py  users.py
app1/src/services/: integration.py  users.py
app2/: Dockerfile  pyproject.toml
app2/src/: main.py
app2/src/schemas/: coords.py
